TOC overflow issue on triple digits and larger font sizes

--- a/packages/buckram/assets/styles/components/toc/_left.scss
+++ b/packages/buckram/assets/styles/components/toc/_left.scss
@@ -84,6 +84,7 @@
       float: $toc-left-chapter-number-float; // TODO
       text-align: $toc-left-chapter-number-align; // $toc-chapter-number-align;
       width: if-map-get($toc-left-left-gutter, $type);
+      overflow-wrap: normal;
     }
   }
 }
